# ki-research-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  SUMMARY.md  checklist.md  config.yaml  index.md  ki-kb-spec-v6.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  sources.yaml
.github/workflows/: approve-reject.yaml  ci.yaml  daily-ingest.yaml  deploy-pages.yaml  radar.yaml  weekly-research.yaml
agents/: changelog_trimmer.py  config_schema.py  consistency_checker.py  cost_tracker.py  critic.py  logging_config.py  merger.py  newsletter.py  parser.py  qa.py  radar.py  researcher.py  resolver.py  source_verifier.py  url_utils.py  web_search.py  writer.py
agents/ingest/: rss_poller.py  web_archive_checker.py
agents/llm/: anthropic_provider.py  azure_openai_provider.py  factory.py  provider.py
chapters/01-plattform-architektur/: ai-gateway.md  cloud-vs-hybrid.md  index.md  multi-modell-strategie.md
chapters/02-use-cases/: index.md  katalog.md  priorisierung.md
chapters/03-datenschutz-informationssicherheit/: datenklassifikation.md  index.md  isds-konzept.md  ndsg.md
radar/: beschaffungen.yaml  llm-news.md  plattformen.yaml
scripts/: build_docs.py
templates/: newsletter.html  subpage.md
tests/: run_all_tests.py  run_full_pipeline.py  run_ingest.py  run_qa.py  test_agents.py  test_config.py  test_cost_tracker.py  test_ingest.py  test_merger.py  test_newsletter.py  test_parser.py  test_qa.py  test_radar.py  test_researcher_ingest.py  test_source_verifier.py  test_url_utils.py  test_web_search.py
(+69 files in other folders)
